now department and role are ‘dynamic’ through url parameters. currently role is dependent on department

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
 		</section>
 
 <!-- BLUE AREA -->
-		<div class="blue-area">
+		<div id="developer" class="blue-area">
 			<section class="wrapper">
 
-				<div id="developer" class="role-notes">
+				<div class="role-notes">
 					<h3 class="heading-divider">A word on development</h3>
 					<aside>Best practices, latest trends, and the importance of team knowledge</aside>
 
