added section for experience and ux role

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					    <div class="bullet-content">
 					    	<h4>Ramp-up buddy</h4>
 					      	<aside>Someone to show you the ropes</aside>
-					      	<p>Tony here in New York and Paul Kwak in San Francisco will your first immediate project contacts. Over the next few months as more projects unfold, you will become better acquainted with various team members. For all office and HR related inquiries, Taisha is your best friend.</p>
+					      	<p>Your go-to buddy here in New York will be <span id="param_buddy"></span>. Over the next few months as more projects unfold, you will become better acquainted with various team members. For all office and HR related inquiries, Taisha is your best friend.</p>
 					    </div>
 					</div>
 				</div>
@@ -166,7 +166,7 @@
 			</div>
 		</section>
 
-<!-- BLUE AREA -->
+<!-- d=developer -->
 		<div id="developer" class="blue-area">
 			<section class="wrapper">
 
@@ -210,6 +210,56 @@
 			</section>
 		</div>
 
+		<!-- d=experience -->
+		<div id="experience" class="blue-area">
+			<section class="wrapper">
+
+				<div class="role-notes">
+					<h3 class="heading-divider">What it means to be an Experience Designer</h3>
+					<aside>Best practices, latest trends, and the importance of team knowledge</aside>
+
+					<p>You will define, create and evaluate useful, usable and intelligent digital products from strategy → ux → prototyping.</p>
+
+					<p>Initial projects will include support on DIRECTV and onboarding on the forthcoming Elsevier portfolio of work.</p>
+
+					<p>The Experience  Design team is very open and collaborative. As a member of the team you’ll be encouraged to share insights and ideas, participate at internal reviews and workshops and reach out if you need help (#safespace).</p>
+
+				</div>
+				<!-- r=UX -->
+				<div id="ux" class="tools">
+
+					<div class="bullets">
+
+						<div class="bullet two-col-bullet">
+							<div class="bullet-icon bullet-icon-1">
+						    	<img src="http://datacapture.sites.tigerspike.com.au/getfile.ashx?id=7299" alt="">
+						    </div>
+						    <div class="bullet-content">
+						    	<h4>Core Tools</h4>
+						    	<aside>The experience canvas</aside>
+						    	<ul>
+						    		<li>Experience Design - Sketching, Omnigraffle, Sketch, InVision</li>
+									<li>Collaboration - Evernote and Slack</li>
+									<li>Project Management - Basecamp, Google Docs, Netsuite</li>
+								</ul>
+						    </div>
+						</div>
+
+						<div class="bullet two-col-bullet">
+							<div class="bullet-icon bullet-icon-1">
+						    	<img src="./developer-intro_files/getfile(12).ashx" alt="">
+						    </div>
+						    <div class="bullet-content">
+						    	<h4>Keeping up-to-date</h4>
+						    	<aside>The TS Experience blog</aside>
+						    	<p>Staying in touch with industry new, events, tools and emerging trends is really important to us. Feel free to share insights on our global <a href="https://plus.google.com/communities/103201087109793653790" target="_blank">Experience Design Blog</a>.</p>
+						    </div>
+						</div>
+
+					</div>
+				</div>
+			</section>
+		</div>
 		<section class="wrapper">
 
 			<div class="local-area">
