organized for Rachel

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0147)http://internal.tigerspike.com/induction/?n=Kristof&nb=Tony%20Crosby&nbt=developers&c=New%20York&e=kristof.dziemianczyk@tigerspike.com&d=developers -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Welcome to Tigerspike</title>
 
-		<link rel="stylesheet" href="./scss/styles.css" />
-		<script src="./developer-intro_files/jquery.min.js"></script>
-		<script src="./developer-intro_files/scripts.js"></script>
+		<link rel="stylesheet" href="scss/styles.css" />
+		<script src="js/jquery.min.js"></script>
+		<script src="js/scripts.js"></script>
 	</head>
 
 	<body>
@@ -16,7 +15,7 @@
 			<!-- universale: logo -->
 			<div class="logo-row">
 				<a class="logo" href="http://www.tigerspike.com/" alt="Tigerspike">
-					<img src="./developer-intro_files/getfile.ashx" />
+					<img src="img/logo.png" />
 				</a>
 			</div>
 
@@ -32,7 +31,7 @@
 
 			<div class="welcome-message row">
  				<h3>Hi <span id="param_name">Kristof</span>, welcome to Tigerspike!</h3>
-				<p>We’re really happy to have you on board and we think you’ll be a great addition to the team. There are a couple of things to prepare for as you settle into your new role. We've included a link with a bit of information that might help you get to know the team, the business, and the area. Always feel free to ask any questions and again, welcome!</p>
+				<p>We’re really happy to have you on board and we think you’ll be a great addition to the team. There are a couple of things to prepare for, covering your first few weeks. Principal among those to discuss is your schedule for the following week and to ensure that there are a number of introductory sessions lined-up. In lieu of that discussion, here are some of the big ticket items to muse on or refer back to whilst you settle in.</p>
 
 				<aside>Alex Hall – President, Americas</aside>
 			</div>
@@ -47,7 +46,7 @@
 
 					  <div class="bullet three-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(2).ashx" alt="">
+					      <img src="img/clock.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Hours</h4>
@@ -58,18 +57,18 @@
 
 					  <div class="bullet three-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(3).ashx" alt="">
+					      <img src="img/easel.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Your Seating</h4>
-					      <aside>The dev team</aside>
+					      <aside>The <span id="param_dept"></span> team</aside>
 					      <p>You will be sitting next to <span id="param_neighbor">Tony Crosby</span>, one of our <span id="param_neighbor_type">developers</span> here in <span id="param_city">New York</span></p>
 					    </div>
 					  </div>
 
 					  <div class="bullet three-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(4).ashx" alt="">
+					      <img src="img/collar.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Dress Code</h4>
@@ -110,7 +109,7 @@
 
 					  <div class="bullet four-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(6).ashx" alt="">
+					      <img src="img/tie.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Commercial</h4>
@@ -120,7 +119,7 @@
 
 					  <div class="bullet four-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(7).ashx" alt="">
+					      <img src="img/glasses.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Technology</h4>
@@ -130,17 +129,17 @@
 
 					  <div class="bullet four-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(8).ashx" alt="">
+					      <img src="img/cog.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Production</h4>
-					      <aside><a href="mailTo:marina.lee@tigerspike.com">Marina Lee</a></aside>
+					      <aside><a href="mailTo:zahra.qayoom@tigerspike.com">Zahra Qayoom</a></aside>
 					    </div>
 					  </div>
 
 					  <div class="bullet four-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(9).ashx" alt="">
+					      <img src="img/bowtie.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					      <h4>Design</h4>
@@ -153,7 +152,7 @@
 				<div class="bullets">
 					<div class="bullet one-col-bullet">
 					    <div class="bullet-icon bullet-icon-1">
-					      <img src="./developer-intro_files/getfile(9).ashx" alt="">
+					      <img src="img/bowtie.png" alt="">
 					    </div>
 					    <div class="bullet-content">
 					    	<h4>Ramp-up buddy</h4>
@@ -185,7 +184,7 @@
 
 						<div class="bullet two-col-bullet">
 							<div class="bullet-icon bullet-icon-1">
-						    	<img src="http://datacapture.sites.tigerspike.com.au/getfile.ashx?id=7299" alt="">
+						    	<img src="img/wrench.png" alt="">
 						    </div>
 						    <div class="bullet-content">
 						    	<h4>Core Tools</h4>
@@ -196,7 +195,7 @@
 
 						<div class="bullet two-col-bullet">
 							<div class="bullet-icon bullet-icon-1">
-						    	<img src="./developer-intro_files/getfile(12).ashx" alt="">
+						    	<img src="img/update.png" alt="">
 						    </div>
 						    <div class="bullet-content">
 						    	<h4>Keeping up-to-date</h4>
@@ -220,8 +219,6 @@
 
 					<p>You will define, create and evaluate useful, usable and intelligent digital products from strategy → ux → prototyping.</p>
 
-					<p>Initial projects will include support on DIRECTV and onboarding on the forthcoming Elsevier portfolio of work.</p>
-
 					<p>The Experience  Design team is very open and collaborative. As a member of the team you’ll be encouraged to share insights and ideas, participate at internal reviews and workshops and reach out if you need help (#safespace).</p>
 
 				</div>
@@ -232,7 +229,7 @@
 
 						<div class="bullet two-col-bullet">
 							<div class="bullet-icon bullet-icon-1">
-						    	<img src="http://datacapture.sites.tigerspike.com.au/getfile.ashx?id=7299" alt="">
+						    	<img src="img/wrench.png" alt="">
 						    </div>
 						    <div class="bullet-content">
 						    	<h4>Core Tools</h4>
@@ -247,7 +244,7 @@
 
 						<div class="bullet two-col-bullet">
 							<div class="bullet-icon bullet-icon-1">
-						    	<img src="./developer-intro_files/getfile(12).ashx" alt="">
+						    	<img src="img/update.png" alt="">
 						    </div>
 						    <div class="bullet-content">
 						    	<h4>Keeping up-to-date</h4>
@@ -258,8 +255,73 @@
 
 					</div>
 				</div>
+				<!-- end r=UX -->
+
+				<!-- r=UI -->
+
+				<div id="ui" class="tools">
+
+					<div class="bullets">
+
+						<div class="bullet two-col-bullet">
+							<div class="bullet-icon bullet-icon-1">
+						    	<img src="img/wrench.png" alt="">
+						    </div>
+						    <div class="bullet-content">
+						    	<h4>Core Tools</h4>
+						    	<aside>The experience canvas</aside>
+						    	<ul>
+						    		<li>Visual Design - Sketching, Adobe, Sketchapp, Invision</li>
+									<li>Collaboration - Evernote and Slack</li>
+									<li>Project Management - Basecamp, Google Docs, Netsuite</li>
+								</ul>
+						    </div>
+						</div>
+
+						<div class="bullet two-col-bullet">
+							<div class="bullet-icon bullet-icon-1">
+						    	<img src="img/update.png" alt="">
+						    </div>
+						    <div class="bullet-content">
+						    	<h4>Keeping up-to-date</h4>
+						    	<aside>The TS Experience blog</aside>
+						    	<p>Staying in touch with industry new, events, tools and emerging trends is really important to us. Feel free to share insights on our global <a href="https://plus.google.com/communities/103201087109793653790" target="_blank">Experience Design Blog</a>.</p>
+						    </div>
+						</div>
+
+					</div>
+				</div>
+
+				<!-- end r=UI -->
+
 			</section>
 		</div>
+
+		<!-- Checklist -->
+		<section class="wrapper">
+
+			<div class="local-area">
+
+				<h3 class="heading-divider">Goals for the first week</h3>
+
+				<ol class="checklist">
+					<li>Attend project kick-offs for American Express details</li>
+					<li>Initial "One on One" Meeting with Dominique Lee</li>
+					<li>Induction walk-through with Taisha Heimberg</li>
+					<li>Download Kisi app for access to the building and office</li>
+					<li>Fill in new hire paperwork (Taisha to assist with this): Tigerspike personnel & Tax/Payment documentation</li>
+					<li>Organize email filters and generate your email signature</li>
+					<li>Send me a brief bio and photo that will be included in an all company new starter notice</li>
+					<li>For the first week we would appreciate if you can bring your personal laptp to the office. Colby will be setting up your new Mac for you.</li>
+					<li>Familiarise yourself with Tigerspike office processes and personnel</li>
+					<li>Be confident on your roles and responsibilities in terms of UI and UX</li>
+					<li>Have fun!</li>
+				</ol>
+			</div>
+		</section>
+
+		<!-- end Checklist -->
+
 		<section class="wrapper">
 
 			<div class="local-area">
@@ -271,7 +333,7 @@
 
 					<div class="bullet four-col-bullet">
 						<div class="bullet-icon bullet-icon-1">
-							<img src="./developer-intro_files/getfile(13).ashx" alt="">
+							<img src="img/coffee.png" alt="">
 						</div>
 						<div class="bullet-content">
 							<h4>Coffee</h4>
@@ -285,7 +347,7 @@
 
 					<div class="bullet four-col-bullet">
 						<div class="bullet-icon bullet-icon-1">
-							<img src="./developer-intro_files/getfile(14).ashx" alt="">
+							<img src="img/burger.png" alt="">
 						</div>
 						<div class="bullet-content">
 							<h4>Lunch</h4>
@@ -300,7 +362,7 @@
 
 				  	<div class="bullet four-col-bullet">
 						<div class="bullet-icon bullet-icon-1">
-							<img src="./developer-intro_files/getfile(15).ashx" alt="">
+							<img src="img/forks.png" alt="">
 						</div>
 						<div class="bullet-content">
 							<h4>Dinner</h4>
@@ -315,7 +377,7 @@
 
 				  	<div class="bullet four-col-bullet">
 						<div class="bullet-icon bullet-icon-1">
-							<img src="./developer-intro_files/getfile(16).ashx" alt="">
+							<img src="img/bars.png" alt="">
 						</div>
 						<div class="bullet-content">
 							<h4>Bars</h4>
@@ -335,7 +397,7 @@
 
 			<footer>
 				<div class="footer-logo">
-					<a href="http://www.tigerspike.com/" style="text-decoration:none;"><img src="./developer-intro_files/getfile.ashx" width="183" alt="Tigerspike"></a>
+					<a href="http://www.tigerspike.com/" style="text-decoration:none;"><img src="img/logo.png" width="183" alt="Tigerspike"></a>
 				</div>
 				<ul class="country-list">
 					<li>New York</li>
